# tic-tac-toe

./: CMakeLists.txt  main.cpp
include/: game.hpp  mark.hpp  text.hpp
src/: CMakeLists.txt  game.cpp  mark.cpp  text.cpp
